fix db thread gc issues by making sure db's clean up outstanding threads when they go away, r/sr=standard8, part of bug 538750